# Boltzmann1Dsolver

./: .gitattribute  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
Boltzmann_1D_Solver/interface/: MacroparametersFileInterface.h
Boltzmann_1D_Solver/solver/: AdvectionEq1DSolvers.h  BGKChannel1D.h  BoltzmannEq1DSolvers.h  FullBoltzmann1D3V.h  LinearizedBGKChannel1D.h  main.cpp
Boltzmann_1D_Solver/utils/: AdditionalMath.h  ExplicitEuler.h  Norma.h  OpenMpCompat.h  rkMethods.h
output/bgk_channel/: bulk_vx.txt  density.txt  distribution_f.txt  temperature.txt  velocity_axis.txt
output/bgk_channel/couette/: bulk_vx.txt  convergence_history.txt  density.txt  distribution_center.txt  distribution_left.txt  distribution_right.txt  temperature.txt
output/bgk_channel/heat_conduction/: bulk_vx.txt  convergence_history.txt  density.txt  distribution_center.txt  distribution_left.txt  distribution_right.txt  temperature.txt  velocity_axis.txt  (+1 more)
public/: index.html
scripts/: animate_distribution_x_v.py  generate_distribution_animation_html.py  generate_distribution_gif.swift  generate_distribution_surface.swift  generate_macro_profiles.swift  generate_scalar_profiles.swift  plot_bgk_channel.py  plot_bgk_full_comparison.py  plot_distribution_contour.py  plot_distribution_contrast.py  plot_distribution_deviation.py  plot_distribution_vs_maxwellian.py  plot_distribution_x_v.py  plot_full_boltzmann_convergence.py  plot_full_boltzmann_shock_tube.py  plot_linearized_bgk_channel.py  plot_macro_heatmap.py  plot_three_case_convergence.py  plot_three_case_heatmaps.py
(+381 files in other folders)
